# ChangeLog for www-servers/mongrel
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-servers/mongrel/ChangeLog,v 1.36 2010/02/07 15:59:33 armin76 Exp $

  07 Feb 2010; Raúl Porcel <armin76@gentoo.org> mongrel-1.1.5-r2.ebuild:
  Add ~sparc wrt #301925

*mongrel-1.1.5-r2 (23 Jan 2010)

  23 Jan 2010; Diego E. Pettenò <flameeyes@gentoo.org>
  -mongrel-1.1.5-r1.ebuild, +mongrel-1.1.5-r2.ebuild:
  Fix the converted package (build and install the C extension); run tests
  (manually), and add support for JRuby.

*mongrel-1.1.5-r1 (23 Jan 2010)

  23 Jan 2010; Hans de Graaff <graaff@gentoo.org> +mongrel-1.1.5-r1.ebuild:
  Convert to ruby-fakegem. Drop sparc keyword: #301925.

  15 Jan 2010; Christian Faulhammer <fauli@gentoo.org> mongrel-1.1.5.ebuild:
  Transfer Prefix keywords

  23 Aug 2009; Hans de Graaff <graaff@gentoo.org> -mongrel-1.1.3.ebuild:
  Remove old version.

  30 Nov 2008; Hans de Graaff <graaff@gentoo.org> mongrel-1.1.3.ebuild,
  mongrel-1.1.5.ebuild:
  Current versions of mongrel are not yet fully compatible with Ruby 1.9. Thanks
  to Alex Legler for noticing.

  28 Oct 2008; Brent Baude <ranger@gentoo.org> mongrel-1.1.5.ebuild:
  stable ppc64, bug 240375

  08 Oct 2008; Markus Meier <maekke@gentoo.org> mongrel-1.1.5.ebuild:
  amd64/x86 stable, bug #240375

  07 Oct 2008; Friedrich Oslage <bluebird@gentoo.org> mongrel-1.1.5.ebuild:
  Stable on sparc, bug #240375

  07 Oct 2008; nixnut <nixnut@gentoo.org> mongrel-1.1.5.ebuild:
  Stable on ppc wrt bug 240375

  12 Aug 2008; Hans de Graaff <graaff@gentoo.org> mongrel-1.1.3.ebuild,
  mongrel-1.1.5.ebuild:
  mongrel can also be licensed GPL-2, fixing #233748.

*mongrel-1.1.5 (12 Aug 2008)

  12 Aug 2008; Hans de Graaff <graaff@gentoo.org> +mongrel-1.1.5.ebuild:
  Version bump with minor bugfixes

  12 Aug 2008; Hans de Graaff <graaff@gentoo.org> -mongrel-1.0.ebuild,
  -mongrel-1.0.1.ebuild, -mongrel-1.1.2.ebuild:
  Remove old versions
