@@ -1,5 +1,15 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST mongrel-1.1.5.gem 105472 RMD160 d678d5a07e4ae61c28d0174f1c591a261a335056 SHA1 ce2393a56d49c5fcf726c744917b9a37b6daa743 SHA256 3e1e96fa04bb7e52d8677c43798e917ff2ed8b12fef12678c46eb07871af260e
-EBUILD mongrel-1.1.5-r2.ebuild 2090 RMD160 b8511d0346117f8af18dbaeefcb4481719293709 SHA1 d7556d11e9f58fadb0fc7275d57e3b2eca83c42a SHA256 2771cf5af17cbcb529664e48483266699fb879ed74cc0dd23aada8f5bf593d97
+EBUILD mongrel-1.1.5-r2.ebuild 2121 RMD160 b10e18d74537aed275931ffe9c4083ef546fbd1b SHA1 32a23883753d50f119762b5871cb7d6980fb5180 SHA256 a11bc41d3d9c28f69d4314091d356ae3ce04191dbbaa3f563b7305e2193b3772
 EBUILD mongrel-1.1.5.ebuild 688 RMD160 31411f4683d34aefadbc629a5b1a9e30f38cf625 SHA1 0bb903a6abea5b080df0475a209941cbc2592661 SHA256 8b35c6342a08077127ed06ba88355e4dfe0e956b76359f1c70fcef67d84a3bb0
-MISC ChangeLog 4502 RMD160 b01ff8ab6809de6ddff67a111d0030c30b50d0e2 SHA1 ab60a707b2145c3bff5188663ee1bcf6f14f7b03 SHA256 99e948d648de6485e42f7f525c359bd18d294fbada3f1ae62b145d0d4b5d7d5c
+MISC ChangeLog 4605 RMD160 a460a29f792d0ad3b1ef86a31e41394cea291b21 SHA1 f8ba39b83ab29edde6fbfeb0a1a7b620d93df0e2 SHA256 b6097dbe924e419f2166e4b83656f31108c5fc28704c4368952ca18aaecb3809
 MISC metadata.xml 158 RMD160 097f8145a9994f98be4971b43b23b9e5e8bccb66 SHA1 7ac646714b1ab83fda98f3ccdd8b48a31c148b27 SHA256 70b396ab3c7a63a81cb895b7728bd9eccdc9770afdb9919f2c54694b685f7032
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.16 (GNU/Linux)
+
+iF4EAREIAAYFAk0GAK0ACgkQppaJjIURYXJidgD8DUBjg8oIBnh3u9nKl/kLV5qG
+kw/n3fMOtx9JqgMU2T4A/jaKrlmdWi4yrSOXW+ceJYyVToljDvpEeKjAbJ6bBiKT
+=I7Sl
+-----END PGP SIGNATURE-----
