@@ -1,6 +1,6 @@
 # Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/www-servers/mongrel/mongrel-1.1.5-r2.ebuild,v 1.2 2010/02/07 15:59:33 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-servers/mongrel/mongrel-1.1.5-r2.ebuild,v 1.3 2010/12/13 11:16:50 graaff Exp $
 
 EAPI="2"
 
@@ -13,7 +13,7 @@ RUBY_FAKEGEM_TASK_TEST=""
 
 RUBY_FAKEGEM_EXTRADOC="CHANGELOG README TODO"
 
-inherit ruby-fakegem
+inherit multilib ruby-fakegem
 
 DESCRIPTION="A small fast HTTP library and server that runs Rails, Camping, and Nitro apps"
 HOMEPAGE="http://mongrel.rubyforge.org/"
@@ -48,7 +48,7 @@ each_ruby_compile() {
 
 			# Move it here to avoid special-casing the test and
 			# install phases.
-			cp ext/http11_java/http11.jar lib/ || die "unable to copy http11.so"
+			cp ext/http11_java/http11.jar lib/ || die "unable to copy http11.jar"
 			;;
 		*)
 			pushd ext/http11 &>/dev/null
@@ -58,7 +58,7 @@ each_ruby_compile() {
 
 			# Move it here to avoid special-casing the test and
 			# install phases.
-			cp ext/http11/http11.so lib/ || die "unable to copy http11.so"
+			cp ext/http11/http11$(get_modname) lib/ || die "unable to copy http11 shared object"
 			;;
 	esac
 }
