@@ -1,6 +1,9 @@
 # ChangeLog for www-servers/mongrel
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-servers/mongrel/ChangeLog,v 1.36 2010/02/07 15:59:33 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-servers/mongrel/ChangeLog,v 1.37 2010/12/13 11:16:50 graaff Exp $
+
+  13 Dec 2010; Hans de Graaff <graaff@gentoo.org> mongrel-1.1.5-r2.ebuild:
+  Fix compilation on macos.
 
   07 Feb 2010; Raúl Porcel <armin76@gentoo.org> mongrel-1.1.5-r2.ebuild:
   Add ~sparc wrt #301925
